<resources>
    <string name="app_name">Pacmanlike</string>
    <string name="start_button">Start</string>
    <string name="game_started">" has started!"</string>
    <string name="game_name">The game</string>
    <string name="exit_button">Exit</string>
    <string name="play_button">Play</string>
    <string name="create_level_button">Create New Level...</string>
    <string name="basic_map_name">Basic map</string>
    <string name="select_level">Please, select which level you want to play</string>
    <string name="none">None</string>
    <string name="crossroad">X-Road</string>
    <string name="halfcrossroad">T-Road</string>
    <string name="straight">I-Road</string>
    <string name="turn">L-Road</string>
    <string name="import_button">Import map...</string>
    <string name="discard_button">Discard</string>
    <string name="export_button">Export map...</string>
    <string name="save_button">Save</string>
    <string name="validate_button">Validate</string>
    <string name="rotate_button">Rotate</string>
    <string name="select_pac_pos">Select pacman starting position</string>
    <string name="select_power_pos">Select locations for power pellets</string>
    <string name="continue_button">Continue</string>
    <string name="return_button">Return</string>
    <string name="instructions_return">Map is invalid, please return to the map tiling stage</string>
    <string name="instructions_saved">Level has been successfully saved.</string>
    <string name="instructions_validated">Level has been validated, you can save it now</string>
    <string name="game_over_text">GAME OVER</string>
    <string name="highscore_text">NEW HIGHSCORE!</string>
    <string name="score_text">Your score:</string>
    <string name="retry_button">Retry</string>
    <string name="instructions_mapname">Choose a map name</string>
    <string name="default_map_name">newmap</string>
    <string name="narrow_map">Narrow map</string>
    <string name="victory_text">VICTORY</string>
    <string name="clipboard_copied">Copied to clipboard</string>
    <string name="instructions_import">Please, copy the map code into textbox.</string>
    <string name="instructions_failed_import">Failed to parse, please try again</string>
    <string name="instructions_invalid_map_name">Invalid map name, use only alphanumeric characters</string>
</resources>